# redirect-rs

./: .something  Cargo.toml  README.md  vercel.json
api/: redirect.rs
src/: main.rs
