[package]
name = "redirect-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
querystring = "1.1.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
tokio  = { version = "1",    features = ["full"] }
urlencoding = "2.1.3"
vercel_runtime = { version = "1" }

# Each handler has to be specified as [[bin]]
[[bin]]
name = "catchall" # Or api_all, or any valid name
path = "api/redirect.rs"
